Add links to reports in dropdown menu. Write report for kmom02.

--- a/content/redovisning/02_kmom02.md
+++ b/content/redovisning/02_kmom02.md
@@ -3,3 +3,27 @@
 Redovisning kmom02
 =========================
 
+Jag uppfattar det som att modellering med UML framförallt är användbart tidigt i arbetet när man vill planera strukturen för applikationen.
+
+Jag gillar phpDocs standard för kommentarer. Den verkar vara ganska lik JsDoc. Tydliga kommentarer för varje klass och metod gör det lätt att sätta sig in i koden eller fräscha upp minnet om man har varit borta ifrån kodbasen ett tag.
+
+Att kunna generera dokumentation med "make doc" tycker jag är en väldigt bra idé, framförallt i ett lite senare skede i projektet. Det kan bli lättare att få en överblick över klasserna om man kan se dem beskrivna i html-dokument och få en överblick av strukturen i diagrammen.
+
+Tyvärr får jag riktigt feta felmeddelanden i dokumentationen.
+Det verkar som det är samma fel som beskrivs [här](https://github.com/phpDocumentor/phpDocumentor/issues/1914).
+
+Jag ser att mosbth har gjort en [issue](https://github.com/dbwebb-se/oophp/issues/16) på GitHub och kommer följa utvecklingen.
+
+Det gick bra att föra över spelet till strukturen i Anax. Jag kunde behålla grundstrukturen och i stort sett flytta över det jag hade i mina filer till rutter. 
+
+När jag kollade på de första videorna kände jag mig lite överväldigad av mängden kataloger i ramverket. Men efter att ha följt instrutionerna började jag se strukturen tydligare.
+
+Jag upplever hittills stora likheter mellan Anax och Express som vi använde i databas-kursen, åtminstone när det handlar om hanteringen av rutter.
+
+I grunden verkar mycket handla om olika typer av requests, rutter och sessioner samt rendering av olika vyer. När man väl börjar se helheten tror jag inte att grunderna är så svåra.
+
+Ramverk har nog stora fördelar i större projekt. Även om man kan känna sig lite låst av ramverket i början tror jag att det underlättar för strukturen. Det finns även många inbyggda lösningar som tar hand om en hel del problem, till exempel sessioner och autoloading.
+
+Jag kan tänka mig att om projektet är väldigt litet eller om det behövs speciallösningar som går utanför ramverket så kan det vara bättre att hacka ihop en egen lösning.
+
+Min TIL är att jag börjar se likheterna mellan ramverk som Anax och Express vilket känns mycket trevligt. Utmaningen i framtiden blir att få mer förståelse för vilka för och nackdelar som finns med olika programmeringsspråk och ramverk.
