add report for kmom3

--- a/content/redovisning/03_kmom03.md
+++ b/content/redovisning/03_kmom03.md
@@ -3,4 +3,40 @@
 Redovisning kmom03
 =========================
 
-Detta innehåll är skrivet i markdown och du hittar innehållet i filen `content/redovisning/03_kmom03.md`.
+
+Vi skrev ju en del enhetstester i kursen om datastrukturer och algoritmer med objektorienterad Python.
+Jag tycker att det känns bra att nu ha kommit igång med testning även i PHP.
+
+Mitt intryck är att tillvägangångssättet för enhetstestning inte skiljer sig jättemycket mellan PHP och Python.
+Det ska bli intressant att se hur det fungerar för andra programmeringsspråk.
+
+Jag tänker att enhetstestning är av yttersta vikt när det gäller att kvalitetssäkra koden. I större projekt måste det vara en mycket
+stor fördel att ha automatiserade tester som man kan köra varje gång man har gjort en ändring i kodbasen.
+
+Det här med att skriva testbar kod handlar väl om att skriva kod som går att bryta ner i mindre delar med små klasser och metoder som enkelt kan isoleras för att testas. Det gör det lättare att upptäcka och isolera eventuella felkällor.
+
+White box testing är det vi har gjort nu. Då har man insyn i all kod.
+
+Motsatsen, Black box testing innebär att testaren inte har insyn i kodbasen som testas.
+
+Gray box testing är ett mellanting, där testaren och testteamet delvis känner till hur applikationen ser ut internt.
+
+Positiva tester har som mål att säkerställa att applikationen gör det vi förväntar oss. Testet kontrollerar då huruvida en metod producerar en viss output.
+
+När vi gör negativa tester vill vi se att appen hanterar fel på ett bra sätt, utan att krascha eller orsaka oväntade problem. Det kan till exempel handla om att data med en felaktig datatyp kommer in i en metod. Där vill vi se en smidig felhantering utan att applikationens flöde störs mer än nödvändigt.
+
+Jag utgick ifrån de klasser som jag trodde behövdes och gjorde ett UML-diagram för att få en översikt över vilka metoder jag förväntade mig att skapa. Jag skissade lite på flödet mellan de olika rutterna och gjorde anteckningar om vad för data jag ville hantera i sessionen.
+
+Därefter skapade jag grunden i infrastrukturen för de rutter som skulle användas i ramverket. Jag provade att skicka lite data i sessionen.
+
+Sedan kodade jag ihop klasserna enlig klassdiagrammet.
+
+Efter det byggde jag ihop spelet i me-sidan. Det tog ganska lång tid att få till det. Det jag upplevde som utmanande var att få rätt information överförd mellan rundorna via sessionen.
+
+På ett sätt kände jag att det hade varit skönt att bara dumpa hela Game-objektet i sessionen. Men jag köper Mos direktiv om att det kan vara mindre bra om sessionens innehåll blir allt för stort. Det är nog en dålig rutin att exponera för mycket av den interna logiken i sessionen.
+
+När jag kände att spelet funkade ok körde jag igång enhetesterna för klasserna.
+
+Jag lyckades få till 100% code coverage för klasserna. Men det finns en hel del kod som rör hanteringen av rutter och sessionen. Där vet jag inte hur man skulle göra formella tester. Men att spela igenom spelet i webbläsaren kan väl räknas som en form av funktionstest.
+
+Min TIL är att separera på Session och klasser så mycket som möjligt.
