add report for kmom04

--- a/content/redovisning/04_kmom04.md
+++ b/content/redovisning/04_kmom04.md
@@ -3,19 +3,28 @@
 Redovisning kmom04
 =========================
 
+Trait och interface kändes lite abstrakt till att börja med men efter att ha jobbat igenom övningarna kändes det som att det jag fick ganska bra koll på vad det handlar om.
 
-### Vilka är dina tankar och funderingar kring trait och interface?
+Interface kan vara bra för att kontrollera hur ens klasser används. Det verkar till exempel vara användbart att kunna ha som ett krav att en instans av en klass som tas som argument i en metod måste ha ett visst interface. Då går det inte att skicka in vad som helst där och man säkerställer att objektet som används kommer ha vissa specifika förmågor.
 
+Trait känns som ett bra alternativ till multipelt arv som jag uppfattar det som att PHP inte använder. Det kan ju vara smidigt att ha ett trait med ett antal attribut som sen kan återanvändas i flera klasser.
 
+Jag är bekant med begreppet kontroller ifrån akronymen MVC, Model View Controller. Men jag hade ingen erfarnehet av att jobba med en kontroller.
 
+Kontrollers känns snarlika upplägget med vanliga rutter men jag kan tänka mig att kontrollers är mycket mer skalbara och modulära eftersom de är klasser och kan utnyttja arv, trait och interface för att vara användbara i olika situationer.
 
-### Är du sedan tidigare bekant med begreppet kontroller eller är det nytt och oavsett vad, hur känner du inför begreppet?
+Jag höll det väldigt enkelt med intelligensen. Datorn stannar om det aktuella kastet är över ett visst värde eller om den totala ihopsamlade poängen för draget är över ett visst värde. Det hade så klart gått att göra det bättre, men jag tycker att datorn blev ganska mycket svårare att spela mot med den lilla förändringen.
 
-### Hur gick det att skapa intelligensen och taktiken till tärningsspelet, hur gjorde du?
+Till att börja med tyckte jag att det gick väldigt snabbt att lyfta över koden från rutterna till kontrollern. Allt funkade, till en början.
 
-### Några reflektioner från att integrera hårdare in i ramverkets klasser och struktur?
+När jag gick över till att använda ramverkets inbyggda sessionshantering blev det problem eftersom jag hade en hel del kod i funktioner som jag inte lyckades få till att läsa sessionen.
 
-### Berätta hur väl du lyckades med make test inuti ramverket och hur väl du lyckades att testa din kod med enhetstester (med eller utan kontrollerklassen) och vilken kodtäckning du fick.
+Lösningen blev att ta all kod ifrån funktionerna och lägga in den i kontrollern. Problemet som då uppstod var att metoden playAction i kontrollern blev extremt "fet". Vid valideringen blev det problem med cyclomatic complexity, Npath complexity och att metoden var alldeles för lång.
 
-### Vilken är din TIL för detta kmom?
+Så jag fick sätta mig ner och tänka igenom hur jag kunde bryta upp min monstermetod till flera mindre metoder i kontrollern. Efter att ha tänkt igenom flödet och gjort lite felsökning fick jag det till att fungera med flera lite mindre metoder som gick igenom valideringen.
 
+Precis som i det förra kursmomentet gick det bra att testa klasserna. Jag fick grönt på alla klasser förutom kontroller-klassen som jag valde att inte testa eftersom integrationen i kontrollern i sig tog väldigt mycket tid.
+
+Men jag kan se att det hade kunnat vara användbart att göra tester även för kontrollern. Då underlättar det om kontrollern är uppdelad i många små, avgränsade metoder.
+
+Min TIL är att jag ska försöka tänka på att skapa små och avgränsade klasser, metoder, kontrollers och funktioner.
