add report for kmom05

--- a/content/redovisning/05_kmom05.md
+++ b/content/redovisning/05_kmom05.md
@@ -3,4 +3,19 @@
 Redovisning kmom05
 =========================
 
-Detta innehåll är skrivet i markdown och du hittar innehållet i filen `content/redovisning/05_kmom05.md`.
+
+Koden i övningen PHP PDO och MySQL kändes lite som ett mikroramverk där viss funktionalitet abstraheras via egendefinierade funktioner.
+Jag upplevde det som en bra förberedelse inför att jobba med Anax eftersom många funktioner liknade de som används i ramverket.
+
+Det gick ganska smidigt att integrera koden i ramverket. Eftersom vi redan hade jobbat med en controller-klass i föregående kursmoment kände jag mig bekväm med kontrollern.
+
+Anax/database verkar göra interaktionen med databasen enklare. Mycket syntax kapslas in av API:et så det blir färre rader kod att skriva.
+Jag kan tänka mig att sådana moduler kan göra det lite svårare att styra koden till att göra exakt det man vill, men i det här sammanhanget verkar det fungera bra.
+    
+I appen för filmdatabasen nöjde jag mig i stort sett med att införa basfunktionalitet. Men det var intressant att se i övningen hur man kan skapa paginering och sortering. Det kanske blir aktuellt att jobba vidare med senare. Jag ordnade så att det går att återställa tabellen "movie" till utgångsläget. Jag lyckades inte få tillgång till inloggningsinformation via ramverket på samma sätt som det var gjort i skriptet i övningen. Därför valde jag att enbart lägga in den nödvändiga SQL-koden för att återställa tabellen i en klass som används i kontrollern.
+
+Jag skapade ett trait som har en metod för att validera sökvägen till bilden. Jag vill att sökvägen ska vara i formatet "directory/image.jpg". Detta trait används sen i klasserna som lägger till och uppdaterar information om filmer.
+
+För att få ett lite trevligare flöde för användaren gjorde jag så att man måste bekräfta när man vill ta bort en film. Det skulle gå att få till en ännu bättre user experience. Jag tänker att det finns fler möjligheter att använda flashmeddelande i sessionen för att ge användaren respons på sina åtgärder.
+
+Min TIL är att det går att exekvera SQL-script via funktionen exec() i PHP.
