Edit description for classes 'Content' and 'RequestHelper', add report for kmom06

--- a/content/redovisning/06_kmom06.md
+++ b/content/redovisning/06_kmom06.md
@@ -3,14 +3,21 @@
 Redovisning kmom06
 =========================
 
+Klassen för filtrering känns som ett smidigt upplägg för att kunna formatera texter på olika sätt.
 
-##### Hur gick det att jobba med klassen för filtrering och formatting av texten?
+Det var intressant att se hur man kan anropa metoder dynamiskt via variabler hämtade från en associativ array.
 
+Jag skapade en metod `removeIncompatibleFilters()`. Om användaren försöker kombinera Markdown med `nl2br` eller `makeClickable` gör den metoden så att endast Markdown appliceras. Detta är för att Markdown inte ska krocka med de andra filtren.
 
-##### Berätta om din klasstruktur och kodstruktur för din lösning av webbsidor med innehåll i databasen.
+Kontrollerklassen `CMSController` hanterar rutterna. Det finns en klass `Content` som än så länge inte innehåller så många metoder, men där finns en metod för att skapa en slug och för att spara content.
 
-##### HUr känner du rent allmänt för den koden du skrivit i din me/redovisa, vad är bra och mindre bra?
+Jag skapade en hjälpklass `Requesthelper` som har en metod `getPostArr()` som tar en array ,läser in dess värden från `POST` och returnerar en associativ array med värden från `POST`.
 
-##### Ser du potential till refactoring av din kod och/eller behov av stöd från ramverket?
+Klassen `MyTextFilter` används för att formattera text med olika filter. Den klassen skulle man kanske kunna bygga ut, till exempel med en metod för att skapa ingresser till content.
 
-##### Vilken är din TIL för detta kmom?
+Jag tycker att det just nu känns som att koden går att överblicka och det finns en grund att bygga vidare på i projektet. Jag har börjat bryta ut en del funktionalitet ifrån kontrollern och placerat i klasser. 
+
+Det skulle gå att fortsätta bygga vidare på metoder i klasser och flytta mer kod ifrån kontrollern till klasserna. Det skulle kanske gå att skapa lite mer generella metoder i klasserna som kan användas i flera olika situationer.
+
+Min TIL är att jag ska eftersträva att låta rutterna fånga upp input, delegera arbetet till klasser, evetuellt omdirigera eller rendera sidorna.
+Metoder i klasserna ska utföra större delen av operationerna.
